--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-API_ID=
-API_HASH=
-BOT_TOKEN=
-BOT_UN=
+API_ID=20728996
+API_HASH=6fad9844ccd0e7d0c304eebfa78f384c
+BOT_TOKEN=8349949648:AAHBY3Ye0u45bYMGCYHTMOQotCToum3yquQ
+BOT_UN=Mediaprocesor_bot
